crates/vize_atelier_sfc/src/parse/snapshots/vize_atelier_sfc__parse__tests__script_with_regex_containing_quotes-2.snap
---
source: crates/vize_atelier_sfc/src/parse/tests.rs
expression: template
---
SfcTemplateBlock {
    content: "\n  <div>Test</div>\n",
    loc: BlockLocation {
        start: 195,
        end: 214,
        tag_start: 185,
        tag_end: 225,
        start_line: 13,
        start_column: 11,
        end_line: 15,
        end_column: 1,
    },
    lang: None,
    src: None,
    attrs: {},
}
