crates/vize_atelier_sfc/src/parse/snapshots/vize_atelier_sfc__parse__tests__script_with_tagged_template_literal.snap
---
source: crates/vize_atelier_sfc/src/parse/tests.rs
expression: script
---
SfcScriptBlock {
    content: "\nconst tag = html`<span style=\"color: red\">Hello</span>`\nconst result = css`\n  .container {\n    color: blue;\n  }\n`\nconst x = 1\n",
    loc: BlockLocation {
        start: 14,
        end: 141,
        tag_start: 0,
        tag_end: 150,
        start_line: 1,
        start_column: 15,
        end_line: 9,
        end_column: 1,
    },
    lang: None,
    src: None,
    setup: true,
    attrs: {
        "setup": "",
    },
    bindings: None,
}
